...
        title = {
        },
        navigationIcon = {
            IconButton(onClick = { navController.navigate(NavRoute.Home.route) }) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Return to home screen",
                    tint = MaterialTheme.colorScheme.onPrimary
                )
            }
        },
        actions = {
            IconButton(onClick = { setSearchVisibility(true) }) {
...
